--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,3 +9,5 @@ fory-derive.workspace = true
 fory-core.workspace = true
 bytes.workspace = true
 server = { path = "../server" }
+serde = { version = "1.0.228", features = ["derive"] }
+bincode2 = "2.0.1"
