--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,5 +11,6 @@ fory-derive.workspace = true
 fory-core.workspace = true
 serde_yaml.workspace = true
 serde.workspace = true
+bincode2 = "2.0.1"
 moka.workspace = true
 openraft = { git = "https://github.com/databendlabs/openraft", tag = "v0.10.0-alpha.13", features = ["type-alias"] }
