--- a/core_raft/Cargo.toml
+++ b/core_raft/Cargo.toml
@@ -20,3 +20,4 @@ bytes = "1.0"
 serde_yaml = "0.9.34+deprecated"
 moka = { version = "0.12.12", features = ["sync"] }
 async-trait = "0.1.89"
+tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
