--- a/core_raft/Cargo.toml
+++ b/core_raft/Cargo.toml
@@ -21,3 +21,6 @@ serde_yaml = "0.9.34+deprecated"
 moka = { version = "0.12.12", features = ["sync"] }
 async-trait = "0.1.89"
 tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
+rocksdb = "0.24.0"
+byteorder = "1.5.0"
+tempfile = "3.24.0"
