--- a/core_raft/Cargo.toml
+++ b/core_raft/Cargo.toml
@@ -24,3 +24,5 @@ tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
 rocksdb = "0.24.0"
 byteorder = "1.5.0"
 tempfile = "3.24.0"
+flamegraph = "0.6.11"
+dashmap = "6.1.0"
