--- a/core_raft/Cargo.toml
+++ b/core_raft/Cargo.toml
@@ -10,6 +10,7 @@ futures = "0.3.31"
 tracing = "0.1.44"
 serde = "1.0.149"
 tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
+tokio-util = { version = "0.7.18", features = ["codec"] }
 bincode2 = "2.0.1"
 bytes = "1.11.0"
 serde_yaml = "0.9.34+deprecated"
@@ -21,6 +22,6 @@ byteorder = "1.5.0"
 tempfile = "3.24.0"
 flamegraph = "0.6.11"
 dashmap = "6.1.0"
-tokio-util = "0.7.18"
+
 mimalloc = "0.1.48"
 anyhow = "1.0.100"
