--- a/core_raft/Cargo.toml
+++ b/core_raft/Cargo.toml
@@ -9,12 +9,11 @@ openraft = { git = "https://github.com/databendlabs/openraft", tag = "v0.10.0-al
 openraft-multi = { git = "https://github.com/databendlabs/openraft", tag = "v0.10.0-alpha.13" }
 futures = "0.3.31"
 tracing = "0.1.44"
-serde = "1.0.149"
+serde = "1.0.228"
 tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
 tokio-util = { version = "0.7.18", features = ["codec"] }
 bincode2 = "2.0.1"
 bytes = "1.11.0"
-serde_yaml = "0.9.34+deprecated"
 moka = { version = "0.12.12", features = ["sync"] }
 async-trait = "0.1.89"
 tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
@@ -30,3 +29,7 @@ crossbeam-utils = "0.8.21"
 parking_lot = "0.12.5"
 indexmap = "2.13.0"
 lru = "0.16.3"
+raft-engine = { git = "https://github.com/nasuiyile/raft-engine-serde", branch = "master" }
+rand = "0.8"
+rand_distr = "0.4"
+serde_yaml = "0.9.33"
